--- a/templates/app.html
+++ b/templates/app.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css')}}">
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/index.css')}}"
+    />
     <title>Five Days</title>
   </head>
   <body>
-    <h1>Hello world desde Flask</h1>
-    <p>Lorem, ipsum dolor.</p>
-    <script src="{{ url_for('static', filename='script/app.js')  }}"></script>
+    <header>
+      <nav>
+        <div>
+          <img src="https://i.postimg.cc/X7t3zfw0/sebastian.png" />
+        </div>
+        <div>
+          <a href="{{ url_for('home')  }}"> Home </a>
+          <a href="{{ url_for('about')  }}"> About </a>
+          <a href="{{ url_for('service')  }}"> Service </a>
+          <a href="{{ url_for('contact')  }}"> Contact </a>
+        </div>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="{{ url_for('static', filename='script/main.js')  }}"></script>
   </body>
 </html>
